# data-engineering-zoomcamp

./: .gitignore  pyproject.toml  readme.md
w1/: 0_container_setup.ipynb  1_data_ingestion.ipynb  2_dockerize.ipynb  3_sql_refresher.ipynb  4_gcp.ipynb  5_terraform.ipynb  Dockerfile  db_connection.json  docker-compose.yml  ingest_data.py  readme.md
w1/homework/: readme.md  solution.ipynb
w1/homework/output/: q1.txt  q2_apply.txt  q2_init.txt  q2_plan.txt
w2/: 0_data_lake.md  1_workflow_ochestration_intro.md  2_airflow_setup.md  3_docker_compose_dissect.md  4_aws_to_gcs.md  5_ingesting_data.md  readme.md
w2/airflow/: .env  atandalong.sh  compose.sh  docker-compose.yml  requirements.txt
w2/airflow/dags/: data_ingestion.py  data_ingestion_gcp_dag.py  ingest_fhv_dag.py  ingest_green_dag.py  ingest_yellow_tripdata_dag.py  ingest_zone_dag.py
w2/airflow/refs/: docker-compose.yaml
w2/homework/: solution.ipynb
w3/: 1_big_query.md  2_big_query_best_practice.md  readme.md
w3/homework/: readme.md  solution.ipynb
w3/sql/: 0_fix_schema.ipynb  1_partitioning.ipynb
w4/: readme.md
w4/homework/: readme.md  solution.ipynb
w5/: 0_spark_partition.ipynb  1_download.ipynb  2_sql.ipynb  readme.md
w5/homework/: readme.md  solution.ipynb
workspace/dbt/taxi_rides_ny/: .envrc  .user.yml  dbt_project.yml  profiles.yml
workspace/dbt/taxi_rides_ny/macros/: get_payment_type_description.sql
workspace/dbt/taxi_rides_ny/models/core/: dim_zones.sql  fact_fhv_trips.sql
workspace/dbt/taxi_rides_ny/seeds/: taxi_zone_lookup.csv
(+4 files in other folders)
