[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["JChien <jeffchien13@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pgcli = "^3.4.1"
pandas = "^1.4.3"
pyarrow = "^8.0.0"
SQLAlchemy = "^1.4.39"
ipython-sql = "^0.4.1"
click = "^8.1.3"
apache-airflow = "^2.3.3"
apache-airflow-providers-google = "^8.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
jupyter-contrib-nbextensions = "^0.5.1"
Pygments = "^2.12.0"
pipreqs = "^0.4.11"
pip-tools = "^6.8.0"
black = { version = "^22.6.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
